--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.ide.visualstudio": "2.0.8",
+    "com.unity.playablegraph-visualizer": "0.2.1-preview.3",
     "com.unity.probuilder": "4.5.2",
     "com.unity.progrids": "3.0.3-preview.6",
     "com.unity.test-framework": "1.1.24",
